[project]
name = "langgraph-youtube-agent"
version = "0.1.0"
description = "LangGraph agent to find YouTube videos via MCP."
requires-python = ">=3.11"
dependencies = [
    "adk-langgraph-a2a-youtube-summarizer", # Depends on the root project
    # Add specific dependencies if needed, but most should be in root
]

# Optional: Define specific settings or dependencies for this agent

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources] # Link to the root project in the workspace
adk-langgraph-a2a-youtube-summarizer = { workspace = true }
# a2a-samples = { workspace = true } # If common code is managed via workspace
