[project]
name = "adk-summary-agent"
version = "0.1.0"
description = "ADK agent to summarize YouTube videos via MCP and A2A."
requires-python = ">=3.9"
dependencies = [
    "adk-langgraph-a2a-youtube-summarizer", # Depends on the root project
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
adk-langgraph-a2a-youtube-summarizer = { workspace = true }
# a2a-samples = { workspace = true } # If common code is managed via workspace
